--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,8 +11,11 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@prisma/client": "^6.10.1",
     "@repo/ui": "*",
+    "db": "*",
     "next": "^15.3.0",
+    "prisma": "^6.10.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
