--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "start:web": "cd apps/web && npm run dev",
+    "start:backend-ws": "cd apps/backend-ws && bun run index.ts",
+    "start:backend-http": "cd apps/backend-http && bun run index.ts"
   },
   "devDependencies": {
     "prettier": "^3.6.0",
     "turbo": "^2.5.4",
-    "typescript": "5.8.2"
+    "typescript": "5.8.2",
+    "@types/bun": "latest"
   },
   "engines": {
     "node": ">=18"
@@ -20,5 +24,7 @@
   "workspaces": [
     "apps/*",
     "packages/*"
-  ]
+  ],
+  "module": "index.ts",
+  "type": "module"
 }
