--- a/.github/workflows/cd_backend.yml
+++ b/.github/workflows/cd_backend.yml
@@ -1,3 +1,7 @@
+name: Deploy the backend
+on:
+  push:
+    branches: [ main ]
 jobs:
   build:
     steps:
@@ -6,8 +10,7 @@ jobs:
         uses: Docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
-      
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: Build and push
         uses: docker/build-push-action@v4
