--- a/.github/workflows/cd_backend.yml
+++ b/.github/workflows/cd_backend.yml
@@ -4,8 +4,8 @@ on:
     branches: [ main ]
 jobs:
   build:
+    runs-on: ubuntu-latest
     steps:
-
       - name: Docker login
         uses: Docker/login-action@v2
         with:
