--- a/.github/workflows/cd_backend.yml
+++ b/.github/workflows/cd_backend.yml
@@ -15,8 +15,8 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
-          context: .
-          file: ./docker/Dockerfile.backend
+          context: ..
+          file: ../docker/Dockerfile.backend
           push: true
           tags: satya/app:${{ github.sha }} 
 
