--- a/.github/workflows/cd_frontend.yml
+++ b/.github/workflows/cd_frontend.yml
@@ -21,8 +21,7 @@ jobs:
           context: .
           file: docker/Dockerfile.frontend
           build-args:
-            - DATABASE_URL=${{ secrets.DATABASE_URL }} 
+            DATABASE_URL=${{ secrets.DATABASE_URL }} 
           push: true
-          tags: satyanv /app-frontend:${{ github.sha }}
+          tags: satyanv/app-frontend:${{ github.sha }}
 
-          
