added deploy step

--- a/.github/workflows/cd_ws.yml
+++ b/.github/workflows/cd_ws.yml
@@ -22,3 +22,6 @@ jobs:
           file: docker/Dockerfile.ws
           push: true
           tags: satyanv/app-ws:${{ github.sha }}
+
+      - name: Deploy to VM
+        
