--- a/.github/workflows/cd_backend.yml
+++ b/.github/workflows/cd_backend.yml
@@ -22,3 +22,13 @@ jobs:
           file: docker/Dockerfile.backend
           push: true
           tags: satyanv/app:${{ github.sha }}
+
+      - name: Deploy to VM
+        run: |
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" &> ~/ssh_key
+          mkdir -p /home/runner/.ssh
+          ls /home/runner/.ssh
+          touch /home/runner/.ssh/known_hosts
+          echo "${{ secrets.KNOWN_HOSTS }}" &> /home/runner/.ssh/known_hosts
+          chmod 700 /home/runner/ssh_key
+          ssh -o StrictHostKeyChecking=no -i ~/ssh_key root@13.62.56.111 -t "docker stop user_backend && docker run --name user_backend -d -p 8080:8080 satyanv/app:${{ github.sha }}"
