--- a/docker/Dockerfile.frontend
+++ b/docker/Dockerfile.frontend
@@ -14,7 +14,7 @@ COPY ./apps/web ./apps/web
 
 RUN bun install
 RUN cd packages/db && bunx prisma generate && cd ../..
-RUN DATABASE_URL="postgres://user:pass@localhost:5432/fakedb" bun run build
+RUN DATABASE_URL=${DATABASE_URL} bun run build
 
 EXPOSE 3001 
 
