--- a/.github/workflows/cd_backend.yml
+++ b/.github/workflows/cd_backend.yml
@@ -30,5 +30,5 @@ jobs:
           ls /home/runner/.ssh
           touch /home/runner/.ssh/known_hosts
           echo "${{ secrets.KNOWN_HOSTS }}" &> /home/runner/.ssh/known_hosts
-          chmod 700 /home/runner/ssh_key
-          ssh -o StrictHostKeyChecking=no -i ~/ssh_key root@13.62.56.111 -t "docker stop user_backend && docker run --name user_backend -d -p 8080:8080 satyanv/app:${{ github.sha }}"
+          chmod 700 /home/runner/ssh_key 
+          ssh -o StrictHostKeyChecking=no -i ~/ssh_key ubuntu@13.62.56.111 -t "docker stop user_backend && docker run --name user_backend -d -p 8080:8080 satyanv/app:${{ github.sha }}"
