--- a/.github/workflows/cd_backend.yml
+++ b/.github/workflows/cd_backend.yml
@@ -1,16 +1,18 @@
 name: Deploy the backend
+
 on:
   push:
     branches: [ main ]
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps: 
       - name: Checkout code
-        uses: actions/checkout@v4  # This is missing!
+        uses: actions/checkout@v4
         
       - name: Docker login
-        uses: docker/login-action@v3  # Fixed capitalization
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }} 
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
@@ -25,10 +27,13 @@ jobs:
 
       - name: Deploy to VM
         run: |
-          printf "%s" "${{ secrets.SSH_PRIVATE_KEY }}" > ~/ssh_key
+          cat <<EOF > ~/ssh_key
+${{ secrets.SSH_PRIVATE_KEY }}
+EOF
+          chmod 600 ~/ssh_key
+
           mkdir -p /home/runner/.ssh
-          ls /home/runner/.ssh
-          touch /home/runner/.ssh/known_hosts
-          echo "${{ secrets.KNOWN_HOSTS }}" &> /home/runner/.ssh/known_hosts
-          chmod 600 /home/runner/ssh_key 
-          ssh -o StrictHostKeyChecking=no -i ~/ssh_key ubuntu@13.62.56.111 -t "docker stop user_backend && docker run --name user_backend -d -p 8080:8080 satyanv/app:${{ github.sha }}"
+          echo "${{ secrets.KNOWN_HOSTS }}" > /home/runner/.ssh/known_hosts
+
+          ssh -o StrictHostKeyChecking=no -i ~/ssh_key ubuntu@13.62.56.111 -t \
+            "docker stop user_backend || true && docker rm user_backend || true && docker run --name user_backend -d -p 8080:8080 satyanv/app:${{ github.sha }}"
