--- a/.github/workflows/cd_backend.yml
+++ b/.github/workflows/cd_backend.yml
@@ -27,9 +27,7 @@ jobs:
 
       - name: Deploy to VM
         run: |
-          cat <<EOF > ~/ssh_key
-${{ secrets.SSH_PRIVATE_KEY }}
-EOF
+          printf '%s' "${{ secrets.SSH_PRIVATE_KEY }}" > ~/ssh_key
           chmod 600 ~/ssh_key
 
           mkdir -p /home/runner/.ssh
